--- a/index.html
+++ b/index.html
@@ -1222,27 +1222,19 @@ window.dataLayer = window.dataLayer || [];
                     <!--  Ended Card -->
                      <h2>6. How to generate a stylish name for social media profiles?</h2>
                     <p class="pspace">
-                        pubgfont is the perfect tool to create stylish name for your social media and gaming profiles. It is a popular name generator tool that can generate stylish and unique names for your social media as well as gaming profiles. Just enter your name or text in the name field, 
-                        and it will provide you with unlimited stylish names. With pubgfont, you can personalize your gaming profile with unique symbols and characters or create a name that represents your brand for your social media
-                        accounts. It is easy to use and there is no limit to the stylish name and font options available there. So if you want to impress your audience and leave a lasting impression, use pubgfont to generate a name that
-                        truly reflects your style and personality.
+                        If you want a stylish name for your social media profile, just enter your name in the field below. This tool will give you different stylish names with emojis and symbols. Pick the font style you like, then click 'Copy' to get your stylish name with cool and unique text fonts.
                     </p>
-                    
-                   <!-- <h2>7. Need a tool to create stylish names for social media and gaming profiles?</h2>
-                    <p class="pspace">
-                        If you need a tool that create stylish and unique name for your social media and gaming profile then pubgfont is the perfect tool. It offers a wide range of stylish fonts and stylish symbols to generate
-                        unique and cool names. Simply enter your name or text in the name field and our user-friendly name generator will provide you with many options which you can simply and copy and paste. You can easily create unique
-                        names for your social media and gaming profiles with pubgfont.
-                    </p> -->
                     <h2>8. How to rename or change your name in PUBG Mobile?</h2>
                     <div class="card">
                         <a href="https://pubgfont.com/"><img src="pubgrename.webp" class="card-img-bottom" alt="how to change name in pubg" /></a>
                         <div class="card-body">
-                            <ol style="padding: 8px;">Follow the mentioned steps below to rename or change your name in PUBG Mobile:
-                                <li>Open <b>PUBG Mobile</b> on your device.</li>
-                                <li>At the bottom right side, you will see an <b>Inventory Option</b>; click on it.</li>
-                                <li>Click on the <b>Crate Icon</b> at the bottom, and you will see a Rename Card.</li>
-                                <li>Click on the <b>Rename Card</b> to rename or change your name.</li>
+                            <p>Follow the mentioned steps below to rename or change your name in PUBG Mobile:</p>
+                            <ol style="padding: 8px;">
+                                <li>Open <b>'PUBG Mobile'</b> on your device.</li>
+                                <li>At the bottom right side, you will see an <b>'Inventory Option'</b>then click on it.</li>
+                                <li>Click on the <b>'Crate Icon'</b> at the bottom, and you will see a Rename Card.</li>
+                                <li>Click on the <b>'Rename Card'</b> to rename or change your name.</li>
+                                <li>Once you have renamed or changed your name, click <b>'OK'</b> to save the change.</li>
                               </ol>
                         </div>
                     </div>
