--- a/index.html
+++ b/index.html
@@ -1220,11 +1220,11 @@ window.dataLayer = window.dataLayer || [];
                         </div>
                     </div>
                     <!--  Ended Card -->
-                     <h2>6. How to generate a stylish name for social media profiles?</h2>
+                     <h2>5. How to generate a stylish name for social media profiles?</h2>
                     <p class="pspace">
                         If you want a stylish name for your social media profile, just enter your name in the field below. This tool will give you different stylish names with emojis and symbols. Pick the font style you like, then click 'Copy' to get your stylish name with cool and unique text fonts.
                     </p>
-                    <h2>8. How to rename or change your name in PUBG Mobile?</h2>
+                    <h2>6. How to rename or change your name in PUBG Mobile?</h2>
                     <div class="card">
                         <a href="https://pubgfont.com/"><img src="pubgrename.webp" class="card-img-bottom" alt="how to change name in pubg" /></a>
                         <div class="card-body">
@@ -1238,9 +1238,9 @@ window.dataLayer = window.dataLayer || [];
                               </ol>
                         </div>
                     </div>
-                    <h2>9. Can I use a stylish PUBG name on social media platforms?</h2>
+                    <h2>7. Can I use a stylish PUBG name on social media platforms?</h2>
                     <p class="pspace">
-                        Yes, you can use the stylish names created by pubgfont.com for all your social media and gaming profiles. These names work perfectly on platforms like Facebook, Instagram, Twitter, and TikTok, as well as gaming profiles. With pubgfont, you can make a unique and impressive username for all your accounts. It is a popular <a href="https://pubgfont.com/">PUBG Name Generator</a> tool that supports many fonts for social media and gaming. Many users have used pubgfont to create attractive and unique profiles by mixing different characters and symbols. Our PUBG name generator's fonts also work well for other popular games such as:
+                        Absolutely! The cool names you make with this tool are great for your social media apps and gaming profiles. They are perfect for platforms like Facebook, Instagram, Twitter, and TikTok. With <a href="https://pubgfont.com/">pubgfont.com</a>, you can create a special and impressive username for all your accounts. It is a popular tool for generating names, especially for PUBG. It has lots of font style options for both social media and gaming. Many people have used it to create awesome profiles by mixing different symbols and letters. These name styles also compatible for other popular games like:
                     </p>
                     <ul style="padding: 10px; list-style-type: square;">
                         <li>PlayerUnknown's Battlegrounds (PUBG)</li>
@@ -1252,8 +1252,7 @@ window.dataLayer = window.dataLayer || [];
                     </ul>
                     <h3>Few words from developer:</h3>
                     <p class="pspace">
-                        We hope you are using our PUBG Name Generator tool in your daily life to generate unique and stylish names for your gaming and social media profiles. if you are facing any difficulty or encountered any issue in
-                        accessing or using this site, feel free to contact us. We'll keep working on this site to provide you unique quality content and better user experience.
+                        We hope you are using this tool in your daily life to generate unique and stylish names for your gaming and social media profiles. If you are facing any difficulty or encountered any issue in accessing or using this tool, feel free to contact us. We'll keep working on this tool to provide you unique quality content and better user experience.
                     </p>
                     <p class="card-text"><small class="text-muted">Last updated few mins ago</small></p>
                     <hr />
