--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
         <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap" rel="stylesheet">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5580564546196829"
-        crossorigin="anonymous"></script>
         <!-- Google tag (gtag.js) -->
        <script async src="https://www.googletagmanager.com/gtag/js?id=G-GGDCZGDZHH"></script>
 <script>
@@ -374,9 +372,9 @@ window.dataLayer = window.dataLayer || [];
             </div>
             <div class="container">
                 <ol>
-                    <li><b>Enter Your Name</b> in the Input Name Field Above.</li>
-                    <li>Select Favorite <b>Left</b> and <b>Right</b> Stylish Symbols for Your Name</li>
-                    <li>Customize Your Name and Click on <b>'Copy' Button</b> to Copy Your Customized Stylish Name with Symbols.</li>
+                    <li><b>'Enter Your Name'</b> in the Input Name Field Above.</li>
+                    <li>Select Favorite <b>'Left</b> and <b>Right'</b> Stylish Symbols for Your Name</li>
+                    <li>Customize Your Name and Click on <b>'Copy'</b> to Copy Your Customized Stylish Name with Symbols.</li>
                 </ol>
             </div>
             <p class="pspace">
@@ -985,8 +983,8 @@ window.dataLayer = window.dataLayer || [];
                 <h2 class="text-center">PUBG Name Generator with Symbols V6.0</h2>
                 <p>Simply follow the easy steps below to create stylish PUBG name with your favorite stylish symbol using the PUBG Name Generator V6.0.</p>
                 <ol style="padding: 10px;">
-                    <li>Enter Your Name in the Input Name Field Below.</li>
-                    <li>Click on Your Favorite Stylish Symbol Provided Below to Copy it.</li>
+                    <li>'Enter Your Name' in the Input Name Field Below.</li>
+                    <li>Click on Your Favorite 'Stylish Symbol' Provided Below to Copy it.</li>
                     <li>Click on 'Copy' Button to Copy Your Stylish PUBG Name</li>
                 </ol>
                 <div class="input-group mb-3">
