--- a/index.html
+++ b/index.html
@@ -1197,14 +1197,14 @@ window.dataLayer = window.dataLayer || [];
                     <h2>2. What Are PUBG Fonts and the PUBG Name Generator?</h2>
                     <p class="pspace">Having difficulty on deciding PUBG Username? Don not worry, we have got a great solution with the perfect Pubg Name Generator. It is a tool many PUBG players use to create stylish names with cool symbols. You can make unique and stylish nicknames easily by using <a href="https://pubgfont.com/">pubgfonts.com</a>. All the names you create using this tool work perfectly in PUBG Mobile.</p>
                     
-                    <h2>3. Create Stylish PUBG Names with Symbols and Fonts at Pubgfont.com</h2>
+                    <h2>3. Create Stylish PUBG Names with Symbols and Fonts</h2>
                     <p class="pspace">
                         Pubgfont.com is better than other tools that make names for PUBG and fonts that look stylish. It gives you many pre-generated cool name fonts and symbols. You can use it to make your own special name with lots of different text styles and symbols. These are important if you want your social media and gaming profiles to look nice. You can also change your current name and add symbols you like. You can use this tool to make:</p>
                         <ul style="padding: 10px;">
-                            <li>PUBG stylish name with symbols</li>
-                            <li>PUBG stylish name with space</li>
-                            <li>PUBG stylish name for boys</li>
-                            <li>PUBG stylish name for girls</li>
+                            <li>PUBG names with symbols</li>
+                            <li>PUBG names with space</li>
+                            <li>PUBG names for boys</li>
+                            <li>PUBG names for girls</li>
                         </ul>
                              <!--       Added Card -->
                     <h2>4. How to Generate a stylish name for PUBG?</h2>
