--- a/index.html
+++ b/index.html
@@ -1199,11 +1199,16 @@ window.dataLayer = window.dataLayer || [];
                     
                     <h2>3. Create Stylish PUBG Names with Symbols and Fonts</h2>
                     <p class="pspace">
-                        Pubgfont.com is better than other tools that make names for PUBG and fonts that look stylish. It gives you many pre-generated cool name fonts and symbols. You can use it to make your own special name with lots of different text styles and symbols. These are important if you want your social media and gaming profiles to look nice. You can also change your current name and add symbols you like. You can use this tool to make:</p>
+                        Pubgfont.com is better than other tools that make names for PUBG and fonts that look stylish. It gives you many pre-generated cool name fonts and symbols. You can use it to make your own special name with lots of different text styles and symbols. These are important if you want your social media and gaming profiles to look nice. You can also change your current name and add symbols you like. You can use this tool to generate:</p>
                         <ul style="padding: 10px;">
-                            <li>PUBG names with symbols</li>
-                            <li>PUBG names with space</li>
-                            <li>PUBG names for boys</li>
+                            <li>pubg stylish name</li>
+                            <li>pubg name with symbols</li>
+                            <li>pubg name style font</li>
+                            <li>pubg names with space</li>
+                            <li>attitude names for pubg</li>
+                            <li>pubg name symbols</li>
+                            <li>pubg names for boys</li>
+                            <li>name generator for pubg</li>
                             <li>PUBG names for girls</li>
                         </ul>
                              <!--       Added Card -->
