--- a/index.html
+++ b/index.html
@@ -66,12 +66,11 @@ window.dataLayer = window.dataLayer || [];
 
             .btn {
                 display: inline-block;
-               background-image: linear-gradient(#16fff3, blue);
-
+                background-image: linear-gradient(#16fff3, blue);
                 color: #fff;
                 padding: 10px 30px;
                 border: none;
-                border-radius: 10px;
+                border-radius: 30px;
                 font-size: 18px;
                 transition: all 0.2s ease-in-out;
             }
@@ -1199,7 +1198,7 @@ window.dataLayer = window.dataLayer || [];
                     
                     <h2>3. Create Stylish PUBG Names with Symbols and Fonts</h2>
                     <p class="pspace">
-                        Pubgfont.com is better than other tools that make names for PUBG and fonts that look stylish. It gives you many pre-generated cool name fonts and symbols. You can use it to make your own special name with lots of different text styles and symbols. These are important if you want your social media and gaming profiles to look nice. You can also change your current name and add symbols you like. You can use this tool to generate:</p>
+                       <a href="https://pubgfont.com/">Pubgfont.com</a> is better than other tools that make names for PUBG and fonts that look stylish. It gives you many pre-generated cool name fonts and symbols. You can use it to make your own special name with lots of different text styles and symbols. These are important if you want your social media and gaming profiles to look nice. You can also change your current name and add symbols you like. You can use this tool to generate:</p>
                         <ul style="padding: 10px;">
                             <li>pubg stylish name</li>
                             <li>pubg name with symbols</li>
@@ -1217,7 +1216,7 @@ window.dataLayer = window.dataLayer || [];
                         <a href="https://pubgfont.com/"><img src="pubgfont.jpeg" class="card-img-bottom" alt="pubgfont" /></a>
                         <div class="card-body">
                             <p class="pspace">
-                                Creating a special and stylish PUBG name with pubgfont is really simple. Just type your name in the box below or paste some text, and our PUBG name generator will give you lots of unique and stylish names with symbols. You can also try different versions of PUBG name generator provided by this tool. When you find the perfect name, just copy and paste it wherever you like. Enhance the look of your PUBG account with our easy to use, simple and user friendly tool,
+                                Creating a special and stylish PUBG name with pubgfont is really simple. Just type your name in the box below or paste some text, and our PUBG name generator will give you lots of unique and stylish names with symbols. You can also try different versions of PUBG name generator provided by this tool. When you find the perfect name, just copy and paste it wherever you like. Enhance the look of your PUBG account with our easy to use, simple and user friendly tool
                             </p>
                             <!--  <p class="card-text"><small class="text-muted">Some text here</small></p> -->
                         </div>
