--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="author" content="Dilawar Khan"/>
-        <!-- <link rel="manifest" href="manifest.json"> -->
+        <link rel="manifest" href="manifest.json">
         <!-- FAVICON -->
        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -302,7 +302,7 @@ window.dataLayer = window.dataLayer || [];
                     <input style="text-align: center; background-color: #dee2e6;" type="text" class="form-control form-control-lg" id="text_output" placeholder="Name Preview" readonly />
                     <button id="text_generate" class="btn btn-lg btn-primary">Copy</button>
                     <!-- Add this code wherever you want to display the install button -->
-      <!-- <button id="installButton" class="download-button"><span>Install Now</span></button>
+      <button id="installButton" class="download-button"><span>Install Now</span></button>
       <div style="text-align: center;">
         <small class="text-muted">Installable only in updated chrome browsers.</small>
         </div> 
@@ -358,7 +358,7 @@ window.dataLayer = window.dataLayer || [];
             // Replace this with your actual notification implementation
             alert(message);
           }
-        </script> -->
+        </script>
                 </div>
             </div>
             <div class="row">
@@ -1071,7 +1071,7 @@ window.dataLayer = window.dataLayer || [];
                         </tbody>
                     </table>
                 </div>
-                    <h2>Some Stylish PUBG Name Ideas:</h2>
+                    <h2>1. Some Stylish PUBG Name Ideas:</h2>
                     <div class="table-responsive">
                         <table class="table table-bordered table-dark">
                             <tbody>
@@ -1114,7 +1114,7 @@ window.dataLayer = window.dataLayer || [];
                             </tbody>
                         </table>
                     </div>
-                            <h2>Useful stylish and unique symbols for social media profiles:</h2>
+                            <h2>2. Useful stylish and unique symbols for social media profiles:</h2>
                             <div class="table-responsive">
                                 <table class="table table-bordered table-dark">
                                     <tbody>
@@ -1141,7 +1141,7 @@ window.dataLayer = window.dataLayer || [];
                                     </tbody>
                                 </table>
                             </div>
-                                <h2>Unique heart stylish symbols for social media profiles:</h2>
+                                <h2>3. Unique heart stylish symbols for social media profiles:</h2>
                                 <div class="table-responsive">
                                     <table class="table table-bordered table-dark">
                                         <tbody>
@@ -1189,15 +1189,15 @@ window.dataLayer = window.dataLayer || [];
                                     </table>
                                 </div>    
                     <p class="card-text"><small class="text-muted">Updated few mins ago.</small></p>
-                    <h2>1. History of PlayerUnknown's Battlegrounds (PUBG)</h2>
+                    <h2>4. History of PlayerUnknown's Battlegrounds (PUBG)</h2>
                     <p class="pspace">
                         You might know about the super engaging multiplayer battle royale game in the gaming world. This game is called Player Unknown's Battlegrounds (PUBG), and it's broken many records. An Irish man named Brendan Greene created and designed this game. To stand out as a great gamer, every player wants a special and stylish name. Everyone desires their own unique identity. You can achieve this with special weapons, clothes, skins, and most importantly, names. A lot of people play PUBG and they're searching for the perfect name for their characters.
                     </p>
 
-                    <h2>2. What Are PUBG Fonts and the PUBG Name Generator?</h2>
+                    <h2>5. What Are PUBG Fonts and the PUBG Name Generator?</h2>
                     <p class="pspace">Having difficulty on deciding PUBG Username? Don not worry, we have got a great solution with the perfect Pubg Name Generator. It is a tool many PUBG players use to create stylish names with cool symbols. You can make unique and stylish nicknames easily by using <a href="https://pubgfont.com/">pubgfonts.com</a>. All the names you create using this tool work perfectly in PUBG Mobile.</p>
                     
-                    <h2>3. Create Stylish PUBG Names with Symbols and Fonts</h2>
+                    <h2>6. Create Stylish PUBG Names with Symbols and Fonts</h2>
                     <p class="pspace">
                        <a href="https://pubgfont.com/">Pubgfont.com</a> is better than other tools that make names for PUBG and fonts that look stylish. It gives you many pre-generated cool name fonts and symbols. You can use it to make your own special name with lots of different text styles and symbols. These are important if you want your social media and gaming profiles to look nice. You can also change your current name and add symbols you like. You can use this tool to generate:</p>
                         <ul style="padding: 10px;">
@@ -1212,7 +1212,7 @@ window.dataLayer = window.dataLayer || [];
                             <li>PUBG names for girls</li>
                         </ul>
                              <!--       Added Card -->
-                    <h2>4. How to Generate a stylish name for PUBG?</h2>
+                    <h2>7. How to Generate a stylish name for PUBG?</h2>
                     <div class="card">
                         <a href="https://pubgfont.com/"><img src="pubgfont.jpeg" class="card-img-bottom" alt="pubgfont" /></a>
                         <div class="card-body">
@@ -1223,11 +1223,11 @@ window.dataLayer = window.dataLayer || [];
                         </div>
                     </div>
                     <!--  Ended Card -->
-                     <h2>5. How to generate a stylish name for social media profiles?</h2>
+                     <h2>8. How to generate a stylish name for social media profiles?</h2>
                     <p class="pspace">
                         If you want a stylish name for your social media profile, just enter your name in the field below. This tool will give you different stylish names with emojis and symbols. Pick the font style you like, then click 'Copy' to get your stylish name with cool and unique text fonts.
                     </p>
-                    <h2>6. How to rename or change your name in PUBG Mobile?</h2>
+                    <h2>9. How to rename or change your name in PUBG Mobile?</h2>
                     <div class="card">
                         <a href="https://pubgfont.com/"><img src="pubgrename.webp" class="card-img-bottom" alt="how to change name in pubg" /></a>
                         <div class="card-body">
@@ -1241,7 +1241,7 @@ window.dataLayer = window.dataLayer || [];
                               </ol>
                         </div>
                     </div>
-                    <h2>7. Can I use a stylish PUBG name on social media platforms?</h2>
+                    <h2>10. Can I use a stylish PUBG name on social media platforms?</h2>
                     <p class="pspace">
                         Absolutely! The cool names you make with this tool are great for your social media apps and gaming profiles. They are perfect for platforms like Facebook, Instagram, Twitter, and TikTok. With <a href="https://pubgfont.com/">pubgfont.com</a>, you can create a special and impressive username for all your accounts. It is a popular tool for generating names, especially for PUBG. It has lots of font style options for both social media and gaming. Many people have used it to create awesome profiles by mixing different symbols and letters. These name styles also compatible for other popular games like:
                     </p>
