--- a/index.html
+++ b/index.html
@@ -1317,6 +1317,17 @@ window.dataLayer = window.dataLayer || [];
             }
         </script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
+        <script>
+            // Add an event listener to the "text_generate" button
+            document.getElementById("text_generate").addEventListener("click", function() {
+              // Display the specified success notification using SweetAlert2
+              Swal.fire(
+                'Copied Successfully!',
+                'Text Copied to Clipboard!',
+                'success'
+              );
+            });
+          </script>
         <script async src="https://static.addtoany.com/menu/page.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
        <script src="script.js"></script>
