--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
        <link rel="manifest" href="/site.webmanifest">
         <!-- Favicon Ended -->
+
+    <!-- Include SweetAlert2 CSS and JS files -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
       <!-- Bootstrap CSS Link -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
@@ -1314,6 +1318,24 @@ window.dataLayer = window.dataLayer || [];
                     });
                 });
             }
+
+              // Add an event listener to the "text_generate" button
+  document.getElementById("text_generate").addEventListener("click", function() {
+    // Get the text from the input field
+    var textToCopy = document.getElementById("text_output").value;
+
+    // Check if the input field is not empty
+    if (textToCopy.trim() !== "") {
+      // Copy text to clipboard (your existing code to copy text goes here)
+
+      // After copying, display the SweetAlert2 success notification
+      Swal.fire(
+        'Copied Successfully!',
+        'Text Copied to Clipboard!',
+        'success'
+      );
+    }
+  });
         </script>
         <script async src="https://static.addtoany.com/menu/page.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
