--- a/index.html
+++ b/index.html
@@ -301,10 +301,13 @@ window.dataLayer = window.dataLayer || [];
                     </select>
                 </div>
             </div>
-            <div class="row" style="margin-bottom: 10px;">
-                <div class="col-md-6 offset-md-3 mt-3">
-                    <input style="text-align: center; background-color: #dee2e6;" type="text" class="form-control form-control-lg" id="text_output" placeholder="Name Preview" readonly />
-                    <button id="text_generate" class="btn btn-lg btn-primary">Copy</button>
+           <!-- Your existing HTML code -->
+<div class="row" style="margin-bottom: 10px;">
+    <div class="col-md-6 offset-md-3 mt-3">
+      <input style="text-align: center; background-color: #dee2e6;" type="text" class="form-control form-control-lg" id="text_output" placeholder="Name Preview" readonly />
+      <button id="text_generate" class="btn btn-lg btn-primary">Copy</button>
+    </div>
+  </div>
                     <!-- Add this code wherever you want to display the install button -->
       <button id="installButton" class="download-button"><span>Install Now</span></button>
       <div style="text-align: center;">
