--- a/index.html
+++ b/index.html
@@ -19,12 +19,7 @@
        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
        <link rel="manifest" href="/site.webmanifest">
         <!-- Favicon Ended -->
-
-    <!-- Include SweetAlert2 CSS and JS files -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
-      <!-- Bootstrap CSS Link -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" />
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap" rel="stylesheet">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5580564546196829"
@@ -301,13 +296,10 @@ window.dataLayer = window.dataLayer || [];
                     </select>
                 </div>
             </div>
-           <!-- Your existing HTML code -->
-<div class="row" style="margin-bottom: 10px;">
-    <div class="col-md-6 offset-md-3 mt-3">
-      <input style="text-align: center; background-color: #dee2e6;" type="text" class="form-control form-control-lg" id="text_output" placeholder="Name Preview" readonly />
-      <button id="text_generate" class="btn btn-lg btn-primary">Copy</button>
-    </div>
-  </div>
+            <div class="row" style="margin-bottom: 10px;">
+                <div class="col-md-6 offset-md-3 mt-3">
+                    <input style="text-align: center; background-color: #dee2e6;" type="text" class="form-control form-control-lg" id="text_output" placeholder="Name Preview" readonly />
+                    <button id="text_generate" class="btn btn-lg btn-primary">Copy</button>
                     <!-- Add this code wherever you want to display the install button -->
       <button id="installButton" class="download-button"><span>Install Now</span></button>
       <div style="text-align: center;">
@@ -1321,24 +1313,6 @@ window.dataLayer = window.dataLayer || [];
                     });
                 });
             }
-
-              // Add an event listener to the "text_generate" button
-  document.getElementById("text_generate").addEventListener("click", function() {
-    // Get the text from the input field
-    var textToCopy = document.getElementById("text_output").value;
-
-    // Check if the input field is not empty
-    if (textToCopy.trim() !== "") {
-      // Copy text to clipboard (your existing code to copy text goes here)
-
-      // After copying, display the SweetAlert2 success notification
-      Swal.fire(
-        'Copied Successfully!',
-        'Text Copied to Clipboard!',
-        'success'
-      );
-    }
-  });
         </script>
         <script async src="https://static.addtoany.com/menu/page.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
