--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ window.dataLayer = window.dataLayer || [];
             <div class="row">
                 <div class="col-md-4 mb-3">
                     <select id="text_first" class="form-control form-control-lg">
-                        <option value="">Select Left Side Symbol</option>
+                        <option value="" align="center">Select Left Side Symbol &#8964;</option>
                         <option value="乡">乡</option>
                         <option value="乂">乂</option>
                         <option value="ツ">ツ</option>
@@ -221,12 +221,8 @@ window.dataLayer = window.dataLayer || [];
                         <option value="乙">乙</option>
                         <option value="ヅ">ヅ</option>
                         <option value="刁">刁</option>
-                        <option value="梦">梦</option>
                         <option value="・">・</option>
                         <option value="の">の</option>
-                        <option value="き">き</option>
-                        <option value="多">多</option>
-                        <option value="本">本</option>
                         <option value="〩">〩</option>
                         <option value="">No Symbol</option>
                     </select>
@@ -243,7 +239,7 @@ window.dataLayer = window.dataLayer || [];
                 </div>
                 <div class="col-md-4 mb-3">
                     <select id="text_last" class="form-control form-control-lg">
-                        <option value="">Select Right Side Symbol</option>
+                        <option value="" align="center">Select Right Side Symbol &#8964;</option>
                         <option value="乡">乡</option>
                         <option value="〆">〆</option>
                         <option value="女">女</option>
@@ -287,12 +283,8 @@ window.dataLayer = window.dataLayer || [];
                         <option value="乙">乙</option>
                         <option value="ヅ">ヅ</option>
                         <option value="刁">刁</option>
-                        <option value="梦">梦</option>
                         <option value="・">・</option>
                         <option value="の">の</option>
-                        <option value="き">き</option>
-                        <option value="多">多</option>
-                        <option value="本">本</option>
                         <option value="〩">〩</option>
                         <option value="">No Symbol</option>
                     </select>
