--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@ window.dataLayer = window.dataLayer || [];
             <div class="row">
                 <div class="col-md-4 mb-3">
                     <select id="text_first" class="form-control form-control-lg">
-                        <option value="" align="center">Select Left Side Symbol &#8964;</option>
+                        <!-- <option value="" align="center">Select Left Side Symbol &#8964;</option> -->
+                        <option value="「">「</option>
                         <option value="乡">乡</option>
                         <option value="乂">乂</option>
                         <option value="ツ">ツ</option>
@@ -194,7 +195,6 @@ window.dataLayer = window.dataLayer || [];
                         <option value=" ͜͡ "> ͜͡ </option>
                         <option value="女">女</option>
                         <option value="ャ">ャ</option>
-                        <option value="「">「</option>
                         <option value="『">『</option>
                         <option value="〘">〘</option>
                         <option value="【">【</option>
@@ -239,7 +239,8 @@ window.dataLayer = window.dataLayer || [];
                 </div>
                 <div class="col-md-4 mb-3">
                     <select id="text_last" class="form-control form-control-lg">
-                        <option value="" align="center">Select Right Side Symbol &#8964;</option>
+                        <!-- <option value="" align="center">Select Right Side Symbol &#8964;</option> -->
+                        <option value="」">」</option>
                         <option value="乡">乡</option>
                         <option value="〆">〆</option>
                         <option value="女">女</option>
@@ -255,7 +256,6 @@ window.dataLayer = window.dataLayer || [];
                         <option value="父">父</option>
                         <option value="乛">乛</option>
                         <option value=" ͜͡ "> ͜͡ </option>
-                        <option value="」">」</option>
                         <option value="』">』</option>
                         <option value="〙">〙</option>
                         <option value="】">】</option>
