--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ window.dataLayer = window.dataLayer || [];
                     />
                 </div>
                 <div class="col-md-4 mb-3">
-                    <select id="text_last" class="form-control form-control-lg">
+                    <select id="text_last" class="form-control form-control-lg text-center">
                         <!-- <option value="" align="center">Select Right Side Symbol &#8964;</option> -->
                         <option value="」">」</option>
                         <option value="乡">乡</option>
