--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ window.dataLayer = window.dataLayer || [];
         <div class="container">
             <div class="row">
                 <div class="col-md-4 mb-3">
-                    <select id="text_first" class="form-control form-control-lg">
+                    <select id="text_first" class="form-control form-control-lg text-center">
                         <!-- <option value="" align="center">Select Left Side Symbol &#8964;</option> -->
                         <option value="「">「</option>
                         <option value="乡">乡</option>
