--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>PUBG Name Generator | PUBG Stylish Name with Cool Symbols 😍</title>
-        <meta name="description" content="pubgfont.com is a popular and latest PUBG Name Generator tool that allows you to create stylish PUBG name with cool and unique symbols" />
+        <meta name="description" content="pubgfont is a popular and latest PUBG Name Generator that allows you to create stylish PUBG name with cool, stylish and unique symbols" />
         <meta
             name="keywords"
             content="PUBG name generator, Stylish PUBG names, Cool PUBG names, Unique PUBG names, Creative PUBG names, PUBG gamer names, Customized PUBG names, PUBG name ideas, Stylish symbols for PUBG names, Free PUBG name generator, Best PUBG name generator, PUBG name creator, PUBG username generator, Online gaming names, Trending PUBG names, Unique symbols for PUBG names, Top PUBG names, PUBG name suggestions, PUBG name inspiration, Stylish PUBG username ideas, Cool symbols for PUBG names, Customized PUBG usernames, PUBG nickname generator, Creative PUBG name generator, Best PUBG clan names, PUBG squad names, Gaming username ideas, Online game names."
@@ -19,7 +19,6 @@
        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
        <link rel="manifest" href="/site.webmanifest">
         <!-- Favicon Ended -->
-        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" /> -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
@@ -754,13 +753,6 @@ window.dataLayer = window.dataLayer || [];
                     <span class="input-group-text copybutton" style="cursor: pointer;" data-clipboard-action="copy" data-clipboard-target="#copy_58">Copy</span>
                 </div>
             </div>
-            <!--     <div class="input-group mb-3">
-      <input type="text" class="form-control text-60" value="⬥︎ ℙ𝕣乇νｉᵉ𝓦 𝐭𝑒Ｘţ ⧫︎" id="copy_59" readonly="readonly" />
-      <div class="input-group-append">
-        <span class="input-group-text copybutton" style="cursor: pointer" data-clipboard-action="copy"
-          data-clipboard-target="#copy_59">Copy</span>
-      </div>
-    </div> -->
             <div class="input-group mb-3">
                 <input type="text" class="form-control text-61" value="✴  🎀  𝒫𝓇𝑒𝓋𝒾𝑒𝓌 𝒯𝑒𝓍𝓉  🎀  ✴" id="copy_60" readonly="readonly" />
                 <div class="input-group-append">
@@ -1107,7 +1099,7 @@ window.dataLayer = window.dataLayer || [];
                             </tbody>
                         </table>
                     </div>
-                            <h2>2. Useful stylish and unique symbols for social media profiles:</h2>
+                            <h2>2. Useful stylish and unique symbols for your name:</h2>
                             <div class="table-responsive">
                                 <table class="table table-bordered table-dark">
                                     <tbody>
@@ -1134,7 +1126,7 @@ window.dataLayer = window.dataLayer || [];
                                     </tbody>
                                 </table>
                             </div>
-                                <h2>3. Unique heart stylish symbols for social media profiles:</h2>
+                                <h2>3. Unique heart stylish symbols:</h2>
                                 <div class="table-responsive">
                                     <table class="table table-bordered table-dark">
                                         <tbody>
